--- a/Views/Home/List.cshtml
+++ b/Views/Home/List.cshtml
@@ -19,6 +19,7 @@
                 <th>Director</th>
                 <th>Rating</th>
                 <th>Edited</th>
+                <th>LentTo</th>
                 <th>Notes</th>
             </tr>
         </thead>
